WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136614
REGRESSION(
r173441
): [GTK] All buttons appear insensitive
https://bugs.webkit.org/show_bug.cgi?id=136614
Summary
REGRESSION(r173441): [GTK] All buttons appear insensitive
Michael Catanzaro
Reported
2014-09-07 17:41:11 PDT
Created
attachment 237758
[details]
screenshot showing insensitive combos Using GTK+ and WebKit master, all buttons, combo boxes, etc. appear insensitive at all times, though they work fine. This persists if I roll back to GTK+ 3.13.7, which definitely worked fine with 2.5.3 and up until quite recently, so this is a regression in WebKit. Suspicion: until quite recently, selected rows were not properly highlighted in combo boxes and lists. Maybe the fix for that is what caused this to break.
Attachments
screenshot showing insensitive combos
(115.87 KB, image/png)
2014-09-07 17:41 PDT
,
Michael Catanzaro
no flags
Details
Patch
(3.05 KB, patch)
2014-09-11 09:42 PDT
,
Carlos Garcia Campos
svillar
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-09-11 09:39:11 PDT
RenderTheme::isReadOnlyControl() changed in
r173441
we should only used it to render text based forms insensitive.
Carlos Garcia Campos
Comment 2
2014-09-11 09:42:14 PDT
Created
attachment 237957
[details]
Patch
Sergio Villar Senin
Comment 3
2014-09-12 03:37:42 PDT
Comment on
attachment 237957
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=237957&action=review
> Source/WebCore/ChangeLog:9 > + render non text based forms sensitive or unsesitive, isEnabled()
unsensitive
Carlos Garcia Campos
Comment 4
2014-09-12 08:44:59 PDT
Committed
r173559
: <
http://trac.webkit.org/changeset/173559
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug