REGRESSION(r173441): [GTK] All buttons appear insensitive https://bugs.webkit.org/show_bug.cgi?id=136614

Reviewed by Sergio Villar Senin.

Do not use RenderTheme::isReadOnlyControl() to decide whether to
render non text based forms sensitive or unsensitive, isEnabled()
is enough in those cases.

* rendering/RenderThemeGtk.cpp:
(WebCore::paintToggle):
(WebCore::renderButton):
(WebCore::RenderThemeGtk::paintSliderTrack):
(WebCore::RenderThemeGtk::paintSliderThumb):

Canonical link: https://commits.webkit.org/154597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173559 268f45cc-cd09-0410-ab3c-d52691b4dbfc